# ec2-ssh

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  install.ps1  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  configuration.md  pypi-setup.md  troubleshooting.md
ec2_connect/: main.py
src/ec2_ssh/: __init__.py  app.css  app.py  main.py
src/ec2_ssh/config/: __init__.py  manager.py  migration.py  schema.py
src/ec2_ssh/screens/: __init__.py  command_overlay.py  file_browser.py  help.py  instance_list.py  key_management.py  main_menu.py  scan_results.py  scp_transfer.py  search.py  server_actions.py  settings.py
src/ec2_ssh/services/: __init__.py  aws_service.py  cache_service.py  command_history.py  connection_service.py  interfaces.py  keyword_store.py  scan_service.py  scp_service.py  ssh_service.py  terminal_service.py
src/ec2_ssh/utils/: __init__.py  match_utils.py
src/ec2_ssh/widgets/: __init__.py  instance_table.py  progress_indicator.py  remote_tree.py  status_bar.py
tests/: conftest.py  test_cache_service.py  test_command_history.py  test_config_manager.py  test_config_migration.py  test_config_schema.py  test_connection_service.py  test_formatting.py  test_keyword_store.py  test_match_utils.py  test_platform_utils.py  test_scp_service.py  test_ssh_service.py  test_ssh_utils.py
