[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ec2-ssh"
version = "2.0.0"
description = "Interactive TUI for managing AWS EC2 SSH connections"
dependencies = [
    "boto3",
    "tabulate",
    "textual>=0.40.0"
]
requires-python = ">=3.8"

[project.scripts]
ec2-ssh = "ec2_ssh.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ec2_ssh"]
